cấu hình lại dự án để phù hợp vơi python flask. cũng đã bổ sung thêm giao diện

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
     <!-- Header -->
@@ -81,7 +81,7 @@
                             <div class="carousel-inner rounded">
                                 <!-- Banner items will be added dynamically -->
                                 <div class="carousel-item active">
-                                    <img src="assets/images/banner1.jpg" class="d-block w-100" alt="Promotion 1">
+                                    <img src="static/images/banner1.jpg" class="d-block w-100" alt="Promotion 1">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#mainBanner" data-bs-slide="prev">
@@ -95,10 +95,10 @@
                     <div class="col-md-4">
                         <!-- Sub Banners -->
                         <div class="sub-banner mb-3 rounded overflow-hidden">
-                            <img src="assets/images/sub-banner1.jpg" class="w-100" alt="Sub Promotion 1">
+                            <img src="static/images/sub-banner1.jpg" class="w-100" alt="Sub Promotion 1">
                         </div>
                         <div class="sub-banner rounded overflow-hidden">
-                            <img src="assets/images/sub-banner2.jpg" class="w-100" alt="Sub Promotion 2">
+                            <img src="static/images/sub-banner2.jpg" class="w-100" alt="Sub Promotion 2">
                         </div>
                     </div>
                 </div>
@@ -196,6 +196,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- Custom JS -->
-    <script src="assets/js/main.js"></script>
+    <script src="static/js/main.js"></script>
 </body>
 </html>
