sữa lại banner và đường dẫn:

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,12 @@
                         <span><i class="fas fa-bell"></i> Thông báo</span>
                     </div>
                     <div class="col-md-6 text-end">
-                        <span class="me-3"><i class="fas fa-question-circle"></i> Hỗ trợ</span>
-                        <a href="register.html" class="text-white text-decoration-none me-3">Đăng ký</a>
-                        <a href="login.html" class="text-white text-decoration-none">Đăng nhập</a>
+                        <span class="me-3" ><i class="fas fa-question-circle"></i> <a href="contact"class="text-white text-decoration-none me-3">Hỗ trợ</a></span>
+                        <a href="signup" class="text-white text-decoration-none me-3">Đăng ký</a>
+                        <a href="login" class="text-white text-decoration-none">Đăng nhập</a>
+                       
+                        
+                        
                     </div>
                 </div>
             </div>
@@ -43,7 +46,7 @@
                 <div class="row align-items-center">
                     <!-- Logo -->
                     <div class="col-md-2">
-                        <a href="index.html" class="text-decoration-none">
+                        <a href="index" class="text-decoration-none">
                             <h1 class="text-white m-0">SmaShop</h1>
                         </a>
                     </div>
@@ -60,7 +63,7 @@
                     
                     <!-- Cart -->
                     <div class="col-md-2 text-end">
-                        <a href="cart.html" class="text-white fs-4">
+                        <a href="cart" class="text-white fs-4">
                             <i class="fas fa-shopping-cart"></i>
                         </a>
                     </div>
@@ -83,6 +86,15 @@
                                 <div class="carousel-item active">
                                     <img src="static/images/banner1.jpg" class="d-block w-100" alt="Promotion 1">
                                 </div>
+
+                                <div class="carousel-item active">
+                                    <img src="static/images/banner2.jpg" class="d-block w-100" alt="Promotion 1">
+                                </div>
+
+                                <div class="carousel-item active">
+                                    <img src="static/images/banner3.jpg" class="d-block w-100" alt="Promotion 1">
+                                </div>
+
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#mainBanner" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon"></span>
